# llm4recsys

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/modified_data/: interactions.parquet  new_items.parquet  submission_data.parquet  users.parquet
diploma/: annotation.tex  bibliography.bib  cfg.tex  config.tex  end.tex  introduction.tex  literature.tex  main.synctex(busy)  main.tex  model.tex  titlepage.tex
notebooks/: RecSys notebook EDA.ipynb  llm_fine_tuning.ipynb  main_research_EDA.ipynb  main_research_clustering.ipynb
